fixed RegTM symbol in Nicotinell on iOS

--- a/src/main/webapp/static/Nicotinell.next/dotter.scss
+++ b/src/main/webapp/static/Nicotinell.next/dotter.scss
@@ -81,7 +81,7 @@ $b-link-visited: #000;
 $b-link-hover: #000;
 $b-link-active: #000;
 
-$dtr-store-brand: 'Nicotinell® ';
+$dtr-store-brand: 'Nicotinell\00AE  ';
 $dtr-store-border-radius: 5px;
 
 $dtr-store-product-details-border: 2px solid $secondary-color;
